--- a/nacl/index.html
+++ b/nacl/index.html
@@ -3,10 +3,10 @@ function on_load() {
   console.log('load');
 
   window.Stockfish = document.getElementById('stockfish');
-  window.Stockfish.postMessage('setoption name Threads value 5');
+  window.Stockfish.postMessage('setoption name Threads value 7');
   window.Stockfish.postMessage('setoption name Hash value 512');
-  window.Stockfish.postMessage('setoption name MultiPV value 3');
-  window.Stockfish.postMessage('position fen R7/P5k1/7p/8/8/6PP/r7/4K3 w - - 0 1 moves');
+  window.Stockfish.postMessage('setoption name MultiPV value 2');
+  window.Stockfish.postMessage('position fen 8/8/1p3pk1/2b2RPp/4Pq1K/2Q3PP/p7/8 w - - 2 42');
   window.Stockfish.postMessage('go depth 99');
 }
 
